# MiniBit

./: .dockerignore  .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  compose.yml  configure_servers.sh  dev.sh  gen_compose_secrets.sh
.cargo/: config.toml
.github/workflows/: docker.yml  gradle.yml  rust.yml
data/bedwars/: config.json
data/boxing/: config.json
data/bridge/: config.json
data/classic/: config.json
data/lobby/: config.json
db/: init.sql
example_configs/: simple_all.yml
example_configs/velocity/: minibit.yml  velocity.toml
example_configs/velocity/viabackwards/: config.yml
example_configs/velocity/viaversion/: config.yml
gate/: config.yml  gate.go  go.mod
gate/plugins/backendserverswitch/: batckendserverswitch.go
gate/plugins/lobbycommand/: lobbycommand.go
run/: configure.sh  start.sh
run/bedwars/: server.json
run/bowfight/: config.json
run/boxing/: config.json
run/bridge/: config.json  server.json
run/classic/: config.json  server.json
run/lobby/: config.json  server.json
run/parkour/: config.json
run/proxy/: config.yml  velocity.toml
run/spaceshooter/: config.json
run/sumo/: config.json  server.json
src/bowfight/: bowfight.rs
src/boxing/: boxing.rs
src/lib/: color.rs  config.rs  damage.rs  death.rs  duels.rs  game.rs  gjk.rs  mod.rs  physics.rs  player.rs  projectiles.rs  scopes.rs  scoreboard.rs  world.rs
src/lib/db/: mod.rs  models.rs  schema.rs
src/lib/duels/: copied_map.rs  map.rs  mod.rs  oob.rs
src/libs/: config.rs  game.rs
src/lobby/: lobby.rs
src/parkour/: parkour.rs
src/sumo/: sumo.rs
tools/secretgen/: Cargo.toml
velocity/: .gitignore  Dockerfile  build.gradle  settings.gradle
(+40 files in other folders)
