[package]
name = "minibit"
version = "0.1.0"
edition = "2021"

[dependencies]
fastrand = "2.1.0"
parry3d = "0.17.0"
serde = "1.0.204"
serde_json = "1.0.120"
valence = { git = "https://github.com/valence-rs/valence" }
valence_anvil = { git = "https://github.com/valence-rs/valence" }

[lib]
name = "minibit_lib"
path = "src/lib/mod.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
