[package]
name = "minibit"
version = "0.1.0"
edition = "2024"

[dependencies]
automod = "1.0.15"
bigdecimal = "0.4.7"
chrono = "0.4.40"
clap = { version = "4.5.54", features = ["derive", "cargo"] }
diesel = { version = "2.2.7", features = ["chrono", "numeric", "postgres", "serde_json"] }
fastrand = "2.1.0"
figment = { version = "0.10.19", features = ["env", "yaml"] }
parry3d = "0.17.0"
serde = "1.0.204"
serde_json = "1.0.120"
valence = { git = "https://github.com/valence-rs/valence" }
valence_anvil = { git = "https://github.com/valence-rs/valence" }

[lib]
name = "minibit_lib"
path = "src/lib/mod.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
